Pakeitimas i LT kalba ir erroru sutvarkymas

--- a/boto-variklis/src/main/resources/application.properties
+++ b/boto-variklis/src/main/resources/application.properties
@@ -1,26 +1,21 @@
-#
-# Training matches (against another gamme engine instance)
-#
 
-training.runs = 150
+# Mokymosi kartai (pries kito boto kopija)
 
-#
-# Selfplay matches (against random computer player)
-#
-
-selfplay.enabled = true
-selfplay.matches = 50
-selfplay.games = 10000
+mokymosi.kartai = 5000
 
 #
-# Learning level
+# ZaidimoPriesSave raundai (Zaidziama pries random ejimu kompiuteri)
 #
 
-learning.stage = 1
+ijungtas.zaidimasPriesSave = true
+zaidimoPriesSave.raundai = 1
+zaidimoPriesSave.zaidimai = 5
 
-#
-# Playing against human
-#
+# Mokymosi lygis
 
-humanplay.enabled = true
+mokymosi.stadija = 1
+
+# Zaidimas zmogaus pries bota
+
+ijungtas.zaidimasPriesZmogu = false
 
