--- a/boto-variklis/POM.xml
+++ b/boto-variklis/POM.xml
@@ -3,18 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.codecentric.gamma-tic-tac-toe</groupId>
-	<artifactId>gamma-engine</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>tic-tac-toe</groupId>
+	<artifactId>boto-variklis</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>gamma-engine</name>
-	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		<version>2.0.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -45,6 +43,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
+    <name>boto-variklis</name>
 </project>
