--- a/boto-variklis/src/main/resources/application.properties
+++ b/boto-variklis/src/main/resources/application.properties
@@ -1,21 +1,15 @@
 
 # Mokymosi kartai (pries kito boto kopija)
+mokymosi.kartai = 1000
 
-mokymosi.kartai = 5000
-
-#
-# ZaidimoPriesSave raundai (Zaidziama pries random ejimu kompiuteri)
-#
-
+# Apmokyto boto \u017eaidimas prie\u0161 kit\u0105 kompiuter\u012f, kuris atlieka random \u0117jimus
 ijungtas.zaidimasPriesSave = true
+# Apmokyto boto \u017eaidim\u0173 prie\u0161 kit\u0105 kompiuter\u012f raund\u0173 skai\u010dius
 zaidimoPriesSave.raundai = 1
-zaidimoPriesSave.zaidimai = 5
+# Apmokyto boto \u017eaidim\u0173 prie\u0161 kit\u0105 kompiuter\u012f vieno raundo \u017eaidim\u0173 skai\u010dius
+zaidimoPriesSave.zaidimai = 500
 
-# Mokymosi lygis
 
-mokymosi.stadija = 1
-
-# Zaidimas zmogaus pries bota
-
+# Galimyb\u0117 \u017eaisti prie\u0161 apmokyt\u0105 bot\u0105
 ijungtas.zaidimasPriesZmogu = false
 
